--- a/src/gameproject/FXML_test.fxml
+++ b/src/gameproject/FXML_test.fxml
@@ -2,15 +2,13 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gameproject.FXMLTestController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gameproject.FXMLTestController">
     <stylesheets>
         <URL value="@fxml_test.css" />
     </stylesheets>
    <children>
-      <CheckBox layoutX="122.0" layoutY="168.0" mnemonicParsing="false" text="I work" />
       <Canvas id="canvas" height="400.0" width="600.0" />
    </children>
 </AnchorPane>
